--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 # reference: http://www.objc.io/issue-6/travis-ci.html
 
 language: objective-c
-# before_install: cd Example && pod install && cd -
+before_install: cd Example && pod install && cd -
+xcode_sdk: iphonesimulator7.1
 script:
 - xctool test -workspace Example/DMSConverter.xcworkspace -scheme DMSConverter -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
